syntax = "proto3";
package deploy;

message Venturer_SkinPart
{
	int32	Id	=	1;
	string	Name	=	2;
	string	Desc	=	3;
}

message Venturer_SkinPart_Map
{
	map<int32, Venturer_SkinPart> Items = 1;
}
